<resources>
    <string name="app_name">HackIllinois</string>

    <string name="home_empty_events">Check Back Later</string>

    <string name="schedule_tab_friday">Friday</string>
    <string name="schedule_tab_saturday">Saturday</string>
    <string name="schedule_tab_sunday">Sunday</string>
    <string name="schedule_tab_monday">Monday</string>

    <string name="schedule_header">Schedule</string>
    <string name="schedule_snackbar_notifications_on">Notifications are on for this event!\nMake sure push notifications are enabled.</string>

    <string name="map_dcl">DCL</string>
    <string name="map_eceb">ECEB</string>
    <string name="map_siebel">SIEBEL</string>
    <string name="map_kenney">KENNEY</string>

    <string name="get_directions">GET DIRECTIONS</string>
    <string name="event_info_time_dash">-</string>
    <string name="event_info_title">EVENT DETAILS</string>

    <string name="favorites_pref_file_key">org.hackillinois.android.favorites</string>
    <string name="authorization_pref_file_key">org.hackillinois.android.authorization</string>
    <string name="welcome_login">WELCOME TO</string>
    <string name="label_login">LOGIN</string>
    <string name="attendee_login">Attendee</string>
    <string name="staff_login">Staff</string>
    <string name="guest_login">Guest</string>
    <string name="login_or_label">- OR -</string>
    <string name="tab_stats">Stats</string>
    <string name="tab_events">Events</string>
    <string name="tab_notifications">Notifications</string>
    <string name="query_stats">Query Stats</string>
    <string name="create">Create</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_start">Event Start</string>
    <string name="event_end">Event End</string>
    <string name="event_sponsor">Event Sponsor</string>
    <string name="event_location">Event Location</string>
    <string name="event_type">Event Type</string>
    <string name="event_room">Event Room</string>
    <string name="notification_topic">Notification Topic</string>
    <string name="notification_content">Notification Content</string>
    <string name="notification_title">Notification Title</string>
    <string name="close_text">Close</string>
    <string name="logout_text">Log Out</string>

    <string name="default_time_homepage">00</string>
    <string name="days_label">DAYS</string>
    <string name="hours_label">HOURS</string>
    <string name="minutes_label">MINUTES</string>
    <string name="projects_header">Projects</string>
    <string name="fav_button_text">Favorites</string>
    <string name="spinner_default">Select Category</string>
    <string name="data_sci_project">DATA SCI</string>
    <string name="languages_project">LANGS</string>
    <string name="systems_project">SYSTEMS</string>
    <string name="web_dev_project">WEB</string>

    <string name="data_science_tag">Data Science</string>
    <string name="web_dev_tag">Web</string>
    <string name="languages_tag">Languages</string>
    <string name="systems_tag">Systems</string>

    <string name="project_favorited_notif">Project added to Favorites!</string>
    <string name="profile_favorited_notif">Profile added to Favorites!</string>

    <string name="outdoors_button">OUTDOORS</string>
    <string name="indoors_buttons">INDOORS</string>

    <string name="login_notice">Log in to see your QR code!</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem cursus, nulla cras. Non in nibh vulputate pharetra, ornare mi malesuada. Id tempus amet est.</string>
    <string name="join_stream">Join Stream!</string>

    <string name="profile">PROFILE</string>
    <string name="diet_restrictions">Dietary Restrictions</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="dairy_free">Lactose Intolerant</string>
    <string name="nut_allergy">Nut Allergy</string>


    <string-array name="event_location_options">
        <item>Siebel Center</item>
        <item>ECE Building</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="event_type_options">
        <item>MEAL</item>
        <item>SPEAKER</item>
        <item>WORKSHOP</item>
        <item>MINIEVENT</item>
        <item>QNA</item>
        <item>OTHER</item>
    </string-array>

    <string name="mealText">Meal</string>
    <string name="speakerText">Speaker</string>
    <string name="workshopText">Workshop</string>
    <string name="miniEventText">Mini-event</string>
    <string name="qnaText">Q&amp;A</string>
    <string name="otherText">Other</string>
    <string name="invalid_code">This code doesn\'t seem to be correct.</string>
    <string name="fab_error_msg">You must log in to use this feature! Go to the Profile tab to logout.</string>
    <string name="enter_code">Enter Code...</string>
    <string name="staff_check_in_override">Staff Check-in Override</string>


    <string-array name="skills_array">
        <item>Adobe Illustrator</item>
        <item>Adobe InDesign</item>
        <item>Adobe Photoshop</item>
        <item>Adobe XD</item>
        <item>Android</item>
        <item>Angular</item>
        <item>Arduino</item>
        <item>AWS</item>
        <item>Azure</item>
        <item>Blender</item>
        <item>C</item>
        <item>C#</item>
        <item>C++</item>
        <item>Canva</item>
        <item>CSS</item>
        <item>Digital Ocean</item>
        <item>Django</item>
        <item>Figma</item>
        <item>Firebase</item>
        <item>Flutter</item>
        <item>Git</item>
        <item>GitHub</item>
        <item>Go</item>
        <item>Godot</item>
        <item>Google Cloud</item>
        <item>Haskell</item>
        <item>HTML</item>
        <item>iOS</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Kotlin</item>
        <item>MongoDB</item>
        <item>MySQL</item>
        <item>NativeScript</item>
        <item>Neo4J</item>
        <item>PHP</item>
        <item>PostgreSQL</item>
        <item>Python</item>
        <item>Raspberry Pi</item>
        <item>React</item>
        <item>React Native</item>
        <item>Ruby</item>
        <item>Rust</item>
        <item>Swift</item>
        <item>TypeScript</item>
        <item>Unity</item>
        <item>Unreal</item>
        <item>Vue</item>
    </string-array>

    <string-array name="team_status_array">
        <item>LOOKING_FOR_TEAM</item>
        <item>LOOKING_FOR_MEMBERS</item>
        <item>NOT_LOOKING</item>
    </string-array>

    <string-array name="team_status_verbose_array">
        <item>Looking For Team</item>
        <item>Looking For Members</item>
        <item>Not Looking</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onboarding_welcome_title">Welcome!</string>
    <string name="onboarding_welcome_description">Swipe to see what our app has to offer!</string>

    <string name="onboarding_countdown_title">Countdown</string>
    <string name="onboarding_countdown_description">See how much time you have left to hack!</string>

    <string name="onboarding_schedule_title">Schedule</string>
    <string name="onboarding_schedule_description">See the times and details of all of our events.</string>

    <string name="onboarding_scan_title">Scan for Points</string>
    <string name="onboarding_scan_description">Scan QR codes at events to obtain points!</string>

    <string name="onboarding_profile_title">Profile</string>
    <string name="onboarding_profile_description">View your points, tier, and other personal information.</string>

    <string name="onboarding_leaderboard_title">Leaderboard</string>
    <string name="onboarding_leaderboard_description">See who is leading HackIllinois 2023 in points earned!</string>

    <string name="home_page_current_tab_text">CURRENT</string>
    <string name="home_page_upcoming_tab_text">UPCOMING</string>

    <string name="preparing_for_the_day">Preparing For the Day...</string>

    <plurals name="leaderboard_points_view">
        <item quantity="one">%d pt</item>
        <item quantity="other">%d pts</item>
    </plurals>

</resources>
