<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_marginEnd="20dp">
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/web_dev_tag"
            android:layout_width="88dp"
            android:layout_height="20dp"
            android:background="@drawable/rounded_blue_bg"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/web_dev_tag"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/languages_tag"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@drawable/rounded_green_bg"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginEnd="8dp"
            android:text="@string/languages_tag"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/data_sci_tag"
            android:layout_width="116dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_orange_bg"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/data_science_tag"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/systems_tag"
            android:layout_width="84dp"
            android:layout_height="20dp"
            android:background="@drawable/rounded_orange_bg"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/systems_tag"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />
    </LinearLayout>
</HorizontalScrollView>
