<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/tabBackground"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextColor="@color/tabText">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_stats" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_events" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_notifications" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/adminContainer"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/colorPrimaryLight"
        android:layout_height="match_parent" />

</LinearLayout>